--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,7 @@ logging:
   level:
     root: INFO
     org.prismedia: INFO
+    org.hibernate.SQL: INFO
 
 ---
 # 로컬 개발 환경 설정
@@ -42,14 +43,6 @@ spring:
       path: /h2-console
 
 logging:
-  charset:
-    console: UTF-8
-    file: UTF-8
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %highlight(%-5level) [%thread] %cyan(%logger{36}) - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n"
-  file:
-    name: ${LOGGING_FILE_NAME:/logs/application.log}
   level:
     org.prismedia: DEBUG
     org.hibernate.SQL: DEBUG
@@ -68,15 +61,11 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+
 logging:
-  charset:
-    console: UTF-8
-    file: UTF-8
-  pattern:
-    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} %highlight(%-5level) [%thread] %cyan(%logger{36}) - %msg%n"
-    file: "%d{yyyy-MM-dd HH:mm:ss.SSS} %-5level [%thread] %logger{36} - %msg%n"
-  file:
-    name: ${LOGGING_FILE_NAME:/logs/application.log}
   level:
     org.prismedia: DEBUG
     org.hibernate.SQL: DEBUG
